This is the Full SwingRendere, not tested but fully completed. Only need to complete is ChapterPanel, Intro, Outro, Sequnce, Activity and Lesson